# llm-serving

./: Cargo.toml  Dockerfile  Dockerfile.gpu  GEMINI.md  README.md  history.md
.github/workflows/: docker-build.yml
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
scripts/: finish_task.sh
src/: lib.rs  main.rs
src/api/: auth.rs  dto.rs  error.rs  mod.rs  routes.rs
src/engine/: mod.rs
src/runtime/: dummy.rs  dummy_embedding.rs  dummy_image.rs  llama_cpp.rs  llava.rs  mod.rs  onnx_embedding.rs  sampler.rs
tests/: chat_api.rs  images_api.rs
